--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,4 @@
 name: CI
-
 on:
   push:
   pull_request:
@@ -9,14 +8,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-versions:
-          - "3.7"
-          - "3.8"
-          - "3.9"
-          - "3.10"
-          - "3.11"
- 
+        os: [ubuntu-latest]
+        python-versions: ["3.11"]  # Use the latest Python version
+
     name: Test
     runs-on: ${{matrix.os}}
 
@@ -25,12 +19,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2  # Use a specific version to ensure the latest Python version is used
         with:
-          python-version: ${{matrix.python-version}}
-      - name: Install Dependancies
-        run: 
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
+          python-version: ${{matrix.python-versions}}
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Run tests
         run: pytest
